# RememberMyMovies

./: .gitignore  CMakeLists.txt  README.md  RUNNING.md
backend/: README.md  app.py  database.py  import_from_csv.py  models.py
data/: movies.csv
docs/: INTERNALS.md
include/: MainWindow.h  movie.h  moviedatabase.h
resources/: AppIcon.rc.in
scripts/: make_icns.sh  make_ico.py
src/: MainWindow.cpp  main.cpp  movie.cpp  moviedatabase.cpp
tools/: run.bat  run.sh  setup.bat  setup.sh
